added both sections

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         // your code goes here
         //example add to mens section. Use the id of the banner
         addScrollto('#mens-de');
+        addScrollto('#womens-de');
 
 
         function addScrollto(element){
